# ReportSystem

./: .gitignore  .gitmodules  AGENTS.md  README.md  biz_requirement.md  check_db_local.py  design.md  design_api.md  design_instance.md  design_scheduler.md  design_template.md  launcher.py  migrate_db.py  migrate_submitter.py  pyproject.toml  run_server.py  spec.md  story.md
modules/backend/: conftest.py  pyproject.toml  requirements.txt
modules/backend/prompts/: data_analysis.yaml
modules/backend/prompts/data_analysis/: generate_chart.yaml
modules/backend/prompts/report/: parameter.yaml
modules/backend/src/: __init__.py  main.py
modules/backend/src/_third_party/ibis/: exceptions.py  ibis_ext.py  state.py
modules/backend/src/contexts/data_analysis/: __init__.py
modules/backend/src/contexts/report/: __init__.py
modules/backend/src/controllers/: __init__.py  chat.py  common.py  health_check.py  report.py  template.py
modules/backend/src/infrastructure/: chatbi_server.py  dependencies.py  dev_support.py  messaging.py  prompts.py
modules/backend/src/routers/: chat.py  docs.py  feedback.py  parameter_options.py  reports.py  system_settings.py  templates.py
modules/backend/src/web/: __init__.py  base.py  container.py
modules/backend/tests/: conftest.py  test_architecture_boundaries.py  test_chat_contract_api.py  test_conversation_service.py  test_dataclass_alias_contract.py  test_docs_router.py  test_dynamic_source_service.py  test_frontend_serving.py  test_parameter_options_router.py  test_persistence_contract.py  test_query_engine.py  test_report_document_gateway.py  test_report_generation_service.py  test_reports_router.py  test_service_type_contracts.py  test_system_settings_router.py  test_templates_router.py
modules/backend/tests/architecture/: test_architecture_boundaries.py  test_service_type_contracts.py  test_test_catalog.py
modules/backend/tests/features/: test_complex_mock_template_export_flow.py  test_document_export_flow.py  test_template_management_flow.py
modules/backend/tests/infrastructure/: test_messaging.py
modules/backend/tests/shared/: test_agentflow_capabilities.py  test_agentflow_runtime.py  test_authenticated.py  test_http_identity.py  test_kernel_log.py  test_message_center.py  test_policy_auth.py  test_prompt_catalog.py
modules/backend/tests/support/: __init__.py  builders.py  fakes.py  mock_external.py  paths.py  tornado_client.py
modules/mock-sdk/: README.md  pyproject.toml
modules/mock-sdk/src/runtime/: __init__.py  cache.py  config.py  db.py  log.py  server.py
modules/mock-sdk/tests/: test_runtime_server.py
modules/mock-server/: pyproject.toml
modules/mock-server/src/mock_server/: __init__.py  main.py
modules/mock-server/tests/: test_mock_server.py
(+1102 files in other folders)
