[project]
name = "report-system"
version = "0.1.0"
description = "Smart report system backend managed with uv."
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiofiles==24.1.0",
    "apscheduler==3.10.4",
    "fastapi==0.115.0",
    "pydantic==2.12.5",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.48",
    "uvicorn==0.30.0",
]

[tool.uv]
package = false
