[project]
name = "report-system-backend"
version = "0.1.0"
description = "ReportSystem FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "aiofiles==24.1.0",
  "apscheduler==3.10.4",
  "fastapi==0.115.0",
  "httpx==0.28.1",
  "ibis-framework[sqlite]==12.0.0",
  "jsonschema>=4.23,<5",
  "pydantic==2.7.0",
  "python-multipart==0.0.9",
  "sqlalchemy==2.0.30",
  "uvicorn==0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
markers = [
  "exporter_e2e: tests that execute the real Java Office exporter CLI",
]
