[project]
name = "report-system-backend"
version = "0.1.0"
description = "ReportSystem backend controllers for the platform Python runtime"
requires-python = ">=3.11"
dependencies = [
  "apscheduler==3.10.4",
  "chatbi-runtime-mock",
  "httpx==0.28.1",
  "ibis-framework[sqlite]==12.0.0",
  "jsonschema>=4.23,<5",
  "pydantic==2.7.0",
  "sqlalchemy==2.0.30",
  "tornado>=6.4,<7",
]

[tool.uv.sources]
chatbi-runtime-mock = { path = "../mock-sdk", editable = true }

[dependency-groups]
dev = [
  "pytest>=8.3,<10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
markers = [
  "exporter_e2e: tests that execute the real Java Office exporter CLI",
]
