[project]
name = "chatbi-runtime-mock"
version = "0.1.0"
description = "Local runtime.server SDK implementation for ReportSystem development"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32,<3",
  "sqlalchemy==2.0.30",
  "tornado>=6.4,<7",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest>=8.3,<10",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
