[project]
name = "report-system-mock-server"
version = "0.1.0"
description = "Pluggable development mock for ReportSystem external integrations"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest>=8.3,<10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
